# software-timer

./: CMakeLists.txt  Jenkinsfile  LICENSE  bbuild.sh  cclang-formatter.sh  getdone.sh  readme.md  ttest.sh
drv/: CMakeLists.txt  gm_timer.c  gm_timer.h
example/: CMakeLists.txt
jenkins/: DeclarativeJenkinsfile.groovy  ScriptedJenkinsfile.groovy  SharedLibraryJenkinsfile.groovy
lib/: CMakeLists.txt  gm_timer.h
src/: main.c
tests/: CMakeLists.txt  test_gm_timer.c
